changes amde to get things working end to end

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,12 +2,13 @@
 FROM python:3.11-slim
 
 # Install system dependencies required by Marker
+# Note: libgl1-mesa-glx was replaced by libgl1 in newer Debian versions
 RUN apt-get update && apt-get install -y \
     git \
     curl \
     wget \
     build-essential \
-    libgl1-mesa-glx \
+    libgl1 \
     libglib2.0-0 \
     libgomp1 \
     libsm6 \
@@ -15,6 +16,7 @@ RUN apt-get update && apt-get install -y \
     libxrender-dev \
     poppler-utils \
     tesseract-ocr \
+    tesseract-ocr-eng \
     sudo \
     && rm -rf /var/lib/apt/lists/*
 
@@ -32,9 +34,15 @@ RUN groupadd --gid $USER_GID $USERNAME \
 ENV PYTHONUNBUFFERED=1
 ENV PIP_NO_CACHE_DIR=1
 
-# Upgrade pip and install marker-pdf
+# Upgrade pip and install marker-pdf with pinned compatible versions
+# Note: This will also install PyTorch (~2GB download)
+# transformers must be <4.42 for surya-ocr compatibility (avoids SDPA error)
 RUN pip install --upgrade pip setuptools wheel && \
-    pip install marker-pdf
+    pip install "marker-pdf>=0.2.0,<0.3" "surya-ocr>=0.4.0,<0.6" "transformers>=4.41.0,<4.42"
+
+# Create directories for model cache with proper ownership
+RUN mkdir -p /home/$USERNAME/.cache/huggingface && \
+    chown -R $USERNAME:$USERNAME /home/$USERNAME/.cache
 
 # Set working directory with proper ownership
 WORKDIR /workspace
